<resources>
    <string name="app_name">MyMovie</string>
    <string name="title_home">홈</string>
    <string name="title_rank">순위</string>
    <string name="title_gps">영화관</string>
    <string name="title_favorite">좋아요</string>
    <string name="title_my">MY</string>

    <string name="type_login">login</string>
    <string name="type_signUp">signUp</string>
    <string name="type_login_success">loginSuccess</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="service_not_available">Catch network or other I/O problems.</string>
    <string name="invalid_lat_long_used">Catch invalid latitude or longitude values.</string>
    <string name="no_address_found"> Handle case where no address was found.</string>
    <string name="address_found">주소 찾음.</string>
    <string name="no_geocoder_available">지오코더 사용 불가</string>
</resources>
